# Groww-RAG-based-Mutual-Fund-FAQ-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: scheduled-refresh.yml
config/: amc_schemes.yaml  chunking.yaml  embedding.yaml  evaluation.yaml  retrieval.yaml  source_allowlist.txt  source_blocklist.txt  url_registry.yaml  vector_store.yaml
data/artifacts/: phase5_complete_pipeline_1777991002.json  phase5_complete_pipeline_1777991636.json  phase5_complete_pipeline_1777991721.json  phase5_complete_pipeline_1777992220.json  phase5_complete_pipeline_1777992442.json  phase5_formatting_results_1777990941.json  phase5_formatting_results_1777992005.json  phase5_results_1777990593.json  phase5_results_1777990617.json  phase5_results_1777990649.json  phase_1_1_registry.json  phase_1_2_fetch.json  phase_1_3_normalize.json  phase_1_4_manifest.json  scheduler_report.json
data/bm25/: MAIN_0cvz3i6p2kowvtm2.seg  MAIN_0toz3pz2gctftjn9.seg  MAIN_16b2s8sk7a4yoynt.seg  MAIN_2fx3s8rmgnlcz60n.seg  MAIN_31lon0v8mgkfz80u.seg  MAIN_3628dein561vung8.seg  MAIN_57wex8ksrh10tm67.seg  MAIN_69cf6plnwnj9d1va.seg  MAIN_7k31sg92y52trniz.seg  (+52 more)
doc/: POLICY.md  deployment-plan.md  edge-cases.md  issue.md  phased-architecture.md  problemStatement.md  rag-architecture.md  sample_qa.md
evaluations/: results.json  retrieval_hit_at_k_results.json
frontend/: .env.local.example  FRONTEND-SETUP.md  README.md  START-HERE.md  next.config.js  package-lock.json  package.json  start-frontend.js  start-local.js  test-local-with-render.js  vercel.json
(+121 files in other folders)
